# mono

./: .bazelignore  .bazelrc  .envrc  .gitignore  BUILD.bazel  LICENSE  MODULE.bazel  README.md  WORKSPACE  bazel_downloader.cfg  cwd.sh  deno.json  deno.jsonc  mkdocs.sh  mkdocs.yml  multitools.lock.json  shell.nix  tools.lock.json
.github/: renovate.json
cli/: BUILD.bazel  README.md
docs/script/: BUILD.bazel  hello.ts  js-kernel.ts  nb.ts
env/: BUILD.bazel
experiments/bforth/: BUILD.bazel  bforth.sh  bforth_test.f  bforth_test.sh  mkdocs.yml
experiments/bforth/docs/: impl.md  index.md  tests.md  usage.md  words.md
experiments/bitrot/: BUILD.bazel  bitrot.c  bitrot.ipynb  map.c  map.h  metrics.c  screen.h  screen.s  screen_move.s  update.s
experiments/c64th/: BUILD.bazel  c64th.c  char_stream.c  char_stream.h  interpreter.c  interpreter.h  lexer.c  lexer.h
experiments/digital/: BUILD.bazel  README.md  mkdocs.yml
experiments/digital/docs/: index.md
experiments/digital/src/: BUILD.bazel  adders.c  adders.h  adders_test.cc  clock.c  clock.h  flipflops.c  flipflops.h  flipflops_test.cc  latches.c  latches.h  latches_test.cc  logic_gates.c  logic_gates.h  logic_gates_test.cc  main.c  main_wasm32.c  observable.c  observable.h
experiments/digital/web/: BUILD.bazel  bundler.ts  main.ts
experiments/disquette/: BUILD.bazel
experiments/disquette/samples/: francis.d64
experiments/disquette/src/: error.rs  lib.rs  main.rs
experiments/gol64/: BUILD.bazel  gol64.c  gol64.js  mkdocs.yml  update_cells.s
experiments/gol64/docs/: index.md
experiments/jasm/: BUILD.bazel  mkdocs.yml
experiments/jasm/docs/: index.md
experiments/jasm/examples/adder/: BUILD.bazel  adder.c  adder.wat
experiments/jasm/src/main/resources/: logback.xml
experiments/leaning/: BUILD.bazel
experiments/mc3d/: .shellcheckrc  BUILD.bazel  base.sh  dda.sh  dda_test.sh  fp.sh  fp_test.sh  linker.sh  main.sh  player.sh  player_test.sh
experiments/nbmagic/nb/: BUILD.bazel  base-kernel.ts  js-kernel.spec.ts  js-kernel.ts  nb-magic-element.ts  nb.ts  swipl-kernel.ts
experiments/os/: BUILD.bazel  README.md  assembler.py  boot.S  boot.asm  defs.bzl  init.c  linker.ld  qemu.sh  walloc_wrapper.c
experiments/os/boot/: BUILD.bazel  boot.asm
experiments/os/kernel/: BUILD.bazel  defs.bzl  kernel.asm  kernel.c  kernel.cc  kernel.hh  linker.ld
experiments/os/kernel/disk/: BUILD.bazel  disk.cc  disk.hh
experiments/os/kernel/idt/: BUILD.bazel  idt.asm  idt.c  idt.cc  idt.h  idt.hh
experiments/os/kernel/io/: BUILD.bazel  io.asm  io.cc  io.h  io.hh
experiments/os/kernel/memory/: BUILD.bazel  allocator.cc  allocator.hh  allocator_test.cc  heap.c  heap.cc  heap.hh  heap_test.cc  memory.h  memset.c  paging.asm  paging.cc  paging.hh
experiments/os/kernel/nostd/: BUILD.bazel  nostd.cc  nostd.hh
experiments/os/kernel/term/: BUILD.bazel  term.cc  term.hh
experiments/os/nostd/: BUILD.bazel  types.h
experiments/projecteuler/: BUILD.bazel  p.fs  problem_1.ts  problem_14.fs  problem_15.ts  problem_15_.pl  problem_19.fs  problem_2.c  problem_3.c  problem_32.fs  problem_35.fs  problem_38.rs  problem_46.ts  problem_65.fs  problem_76.c  problem_79.c  problem_79_.pl  problem_89.pl  problem_9.pl  problem_92.fs
experiments/scratch/: BUILD.bazel
experiments/scratch/examples/helloscratchy/scratchy/: BUILD.bazel  sprite.st3
experiments/scratch/src/: lib.rs  main.rs  parser.rs
experiments/trex/cli/: BUILD.bazel
experiments/trex/cli/src/: main.rs
experiments/typescript-fun/: BUILD.bazel  main.ts  mkdocs.yml  num.ts  wolfram.ts
experiments/typescript-fun/docs/: index.md
experiments/typescript-fun/src/: arithmetic.ts  brainfuck.ts  gol.ts  snake_case.ts  wolfram.ts
modules/rules_scratch/: BUILD.bazel  MODULE.bazel
modules/rules_scratch/_project/: project.json
modules/rules_scratch/examples/hello_world/: BUILD.bazel  sprite.lsp
modules/rules_scratch/extensions/: BUILD.bazel
modules/rules_scratch/extensions/std/: events.pl  looks.pl
modules/rules_scratch/scratch/: defs.bzl
modules/rules_scratch/scratch/private/: providers.bzl  scratch_binary.bzl  scratch_extension.bzl  scratch_sprite.bzl
modules/rules_scratch/src/: lisp.pl  lisprolog.pl  main.rs
modules/scratch/: BUILD.bazel  MODULE.bazel
modules/scratch/bazel/: scratch_binary.bzl  scratch_extension.bzl  scratch_toolchain.bzl
modules/scratch/bazel/toolchains/: BUILD.bazel
modules/scratch/examples/hello_world/: BUILD.bazel
modules/scratch/examples/hello_world/scatchy/: sprite.sctxt
modules/scratch/extensions/: BUILD.bazel  schema.json  std.json
modules/scratch/src/: main.rs
modules/scratch/src/ast/: mod.rs
modules/scratch/src/parser/: mod.rs
modules/toolchains_cc65/: MODULE.bazel
modules/toolchains_cc65/cc65/: cc65_binary.bzl  sim65_binary.bzl  sim65_test.bzl
modules/toolchains_cc65/cc65/private/: sim65_binary.bzl
modules/toolchains_cc65/examples/atari2600/: BUILD.bazel  hello.c  hello.h
modules/toolchains_cc65/examples/sim65/: BUILD.bazel  hello.c  hello.h  main.c
modules/toolchains_cc65/toolchains/: cc65_toolchain.bzl  extensions.bzl
modules/toolchains_cc65/toolchains/actions/: BUILD.bazel
modules/toolchains_cc65/toolchains/args/: BUILD.bazel
modules/toolchains_cc65/toolchains/args/compiler_input_flags/: BUILD.bazel
modules/toolchains_cc65/toolchains/args/cpu/: BUILD.bazel
modules/toolchains_cc65/toolchains/args/dependency_file/: BUILD.bazel
modules/toolchains_cc65/toolchains/private/: cc65_binaries.bzl  cc65_common.bzl  cc65_repo.bzl  cc65_sources.bzl  common.bzl  patch_void_arrays.py
modules/toolchains_cc65/toolchains/tools/: BUILD.bazel  cc65_wrapper.sh
modules/uxn/: BUILD.bazel  BUILD.uxn.bazel  MODULE.bazel  README.md  defs.bzl  extension.bzl  mkdocs.yml  toolchain.bzl
modules/uxn/docs/: index.md
modules/uxn/examples/: BUILD.bazel  app.js  gol.tal  index.html  style.css
modules/uxn/juxn/: BUILD.bazel  Juxn.java  UxnBuilder.java  UxnCore.java
modules/uxn/juxn/devices/: Console.java  Device.java  Empty.java  Screen.java  System.java
modules/uxn/juxn/swing/: JScreen.java
(+124 files in other folders)
