load("@pip//:requirements.bzl", "requirement")
load("@python_versions//3.13:defs.bzl", "py_console_script_binary")
load("@rules_prolog//:prolog_toolchain.bzl", "prolog_toolchain")

prolog_toolchain(
    name = "scryper_prolog",
    tool = "@crates//:scryer_prolog_bin",
)

toolchain(
    name = "scryper_prolog_toolchain",
    toolchain = ":scryper_prolog",
    toolchain_type = "@rules_prolog//:toolchain_type",
)

py_console_script_binary(
    name = "mkdocs",
    data = glob(["docs/**"]) + [
        "mkdocs.yml",
        "//docs/script",
        "//experiments/jasm:docs",
        "//experiments/nbmagic:docs",
        "//experiments/typescript-fun:docs",
    ],
    pkg = requirement("mkdocs"),
    deps = [
        requirement("mkdocs-material"),
        requirement("mkdocs-monorepo-plugin"),
    ],
)
