load("@bazel_env.bzl", "bazel_env")
load("@hedron_compile_commands//:refresh_compile_commands.bzl", "refresh_compile_commands")
load("@multitool//:tools.bzl", MULTITOOL_TOOLS = "TOOLS")
load("@pip//:requirements.bzl", "requirement")
load("@python_versions//3.13:defs.bzl", "py_console_script_binary")
load("@rules_prolog//:prolog_toolchain.bzl", "prolog_toolchain")
load("@rules_shell//shell:sh_binary.bzl", "sh_binary")

bazel_env(
    name = "bazel_env",
    toolchains = {
        "jdk": "@rules_java//toolchains:current_host_java_runtime",
        "python": "@rules_python//python:current_py_toolchain",
    },
    tools = {
        "clangd": "@llvm_toolchain_llvm//:bin/clangd",
        "jar": "$(JAVABASE)/bin/jar",
        "java": "$(JAVA)",
        "python": "$(PYTHON3)",
        "cargo": "@rules_rust//tools/upstream_wrapper:cargo",
        "rustc": "@rules_rust//tools/upstream_wrapper:rustc",
        "rustfmt": "@rules_rust//tools/upstream_wrapper:rustfmt",
        "buildifier": "@buildifier_prebuilt//:buildifier",
        "buildozer": "@buildifier_prebuilt//:buildozer",
        "deno": "@resolved-deno",
        "cc65": "@cc65//:cc65",
        "ca65": "@cc65//:ca65",
        "ld65": "@cc65//:ld65",
        "sim65": "@cc65//:sim65",
    } | MULTITOOL_TOOLS,
)

prolog_toolchain(
    name = "scryper_prolog",
    tool = "@crates//:scryer_prolog_bin",
)

toolchain(
    name = "scryper_prolog_toolchain",
    toolchain = ":scryper_prolog",
    toolchain_type = "@rules_prolog//:toolchain_type",
)

py_console_script_binary(
    name = "mkdocs",
    data = glob(["docs/**"]) + [
        "mkdocs.yml",
        "//docs/script",
        "//experiments/bforth:docs",
        "//experiments/digital:docs",
        "//experiments/jasm:docs",
        "//experiments/nbmagic:docs",
        "//experiments/typescript-fun:docs",
    ],
    pkg = requirement("mkdocs"),
    deps = [
        requirement("mkdocs-material"),
        requirement("mkdocs-monorepo-plugin"),
    ],
)

refresh_compile_commands(
    name = "refresh_compile_commands",
    targets = {
        "//experiments/digital": "",
    },
)

sh_binary(
    name = "cwd",
    srcs = ["cwd.sh"],
)
