bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "aspect_bazel_lib", version = "2.22.5")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_multirun", version = "0.13.0")
bazel_dep(name = "rules_shell", version = "0.6.1")
bazel_dep(name = "uxn")
bazel_dep(name = "rules_prolog")
bazel_dep(name = "toolchains_cc65")
bazel_dep(name = "rules_dotnet", version = "0.21.5")
bazel_dep(name = "toolchain_utils", version = "1.3.0")
bazel_dep(name = "ape", version = "1.1.0")
bazel_dep(name = "rules_shellcheck", version = "0.4.0")
bazel_dep(name = "bazel_env.bzl", version = "0.5.0")
bazel_dep(name = "rules_multitool", version = "1.11.1")
bazel_dep(name = "buildifier_prebuilt", version = "8.2.1.2")

dotnet = use_extension("@rules_dotnet//dotnet:extensions.bzl", "dotnet")
dotnet.toolchain(dotnet_version = "9.0.100")
use_repo(dotnet, "dotnet_toolchains")

register_toolchains("@dotnet_toolchains//:all")

local_path_override(
    module_name = "uxn",
    path = "modules/uxn",
)

register_toolchains("@uxn//:all")

local_path_override(
    module_name = "rules_prolog",
    path = "modules/rules_prolog",
)

register_toolchains("//:all")

bazel_lib_toolchains = use_extension("@aspect_bazel_lib//lib:extensions.bzl", "toolchains")
bazel_lib_toolchains.coreutils()
use_repo(bazel_lib_toolchains, "coreutils_toolchains")

register_toolchains("@coreutils_toolchains//:all")

local_path_override(
    module_name = "toolchains_cc65",
    path = "modules/toolchains_cc65",
)

cc65 = use_extension("@toolchains_cc65//toolchains:extensions.bzl", "cc65")
cc65.bootstrap_from_sources(
    sha256 = "e9c6479e9a6d6b737f4f92341fbc6815e95c2579abd102be9940cb5c36601cef",
    strip_prefix = "cc65-357f64e4e3c733d54b82bc155afc841fd8d9ee8d",
    type = "zip",
    # Make sure to use the same commit as used in the binary snapshots below.
    urls = ["https://codeload.github.com/cc65/cc65/zip/357f64e4e3c733d54b82bc155afc841fd8d9ee8d"],
)
cc65.common_snapshot(
    sha256 = "7f07bcbce6be19567b00f8bac747138d98420eac1dc3980fe277a2f037d12dfa",
    strip_prefix = "usr/share/cc65",
    urls = [
        "https://raw.githubusercontent.com/ffortier/Prebuilt/refs/heads/main/cc65-common_2.19.0.git.1756213875.357f64e4-0_all.deb",
        "https://cdn.statically.io/gh/ffortier/prebuilt/a18aa60f78d2def357ae6033432b7b5c0d475a93/cc65-common_2.19.0.git.1756213875.357f64e4-0_all.deb",
    ],
)
cc65.binary_snapshot(
    platform = "linux-x86_64",
    sha256 = "f2f2e017923525a333187e2778bf1e270659001ba19b66a52cf5cd3f65611253",
    strip_prefix = "usr",
    urls = [
        "https://raw.githubusercontent.com/ffortier/Prebuilt/refs/heads/main/cc65_2.19.0.git.1756213875.357f64e4-0_amd64.deb",
        "https://cdn.statically.io/gh/ffortier/prebuilt/a18aa60f78d2def357ae6033432b7b5c0d475a93/cc65_2.19.0.git.1756213875.357f64e4-0_amd64.deb",
    ],
)
cc65.binary_snapshot(
    platform = "windows-x86_64",
    sha256 = "29c27316692f7f4ea21d9be6be13717cbdecd37d7794c8eb3734159ca241a4bb",
    strip_prefix = "cc65-snapshot-win32",
    urls = [
        "https://raw.githubusercontent.com/ffortier/Prebuilt/refs/heads/main/cc65-snapshot-win32.tar.gz",
        "https://cdn.statically.io/gh/ffortier/prebuilt/a18aa60f78d2def357ae6033432b7b5c0d475a93/cc65-snapshot-win32.tar.gz",
    ],
)
use_repo(cc65, "cc65")

register_toolchains("@cc65//:all")

register_toolchains("//tools/ape/bash:all")

include("//third_party/rust:toolchains.MODULE.bazel")

include("//third_party/rust:deps.MODULE.bazel")

include("//third_party/python:toolchains.MODULE.bazel")

include("//third_party/deno:toolchains.MODULE.bazel")

include("//third_party/cpp:toolchains.MODULE.bazel")

include("//third_party/cpp:deps.MODULE.bazel")

include("//third_party/java:toolchains.MODULE.bazel")

include("//third_party/java:deps.MODULE.bazel")

include("//third_party/dotnet:deps.MODULE.bazel")

include("//third_party/nasm:toolchains.MODULE.bazel")

include("//third_party/esbuild:toolchains.MODULE.bazel")

multitool = use_extension("@rules_multitool//multitool:extension.bzl", "multitool")
multitool.hub(lockfile = "//:multitools.lock.json")
use_repo(multitool, "multitool")
