filegroup(
    name = "script",
    srcs = [
        ":hello",
        ":nb",
        ":swipl",
    ],
    visibility = ["//:__pkg__"],
)

genrule(
    name = "hello",
    srcs = ["hello.ts"],
    outs = ["hello.js"],
    cmd = "$(ESBUILD) $< > $@",
    toolchains = ["//third_party/esbuild:resolved"],
)

genrule(
    name = "nb",
    srcs = ["//experiments/nbmagic"],
    outs = [
        "nb.js",
        "js-worker.js",
    ],
    cmd = "$(COREUTILS_BIN) cp $(SRCS) $(RULEDIR)",
    toolchains = ["@coreutils_toolchains//:resolved_toolchain"],
)

genrule(
    name = "swipl",
    srcs = ["@swipl_wasm//:swipl-web"],
    outs = [
        "swipl-web.js",
        "swipl-web.d.ts",
        "swipl-web.wasm",
        "swipl-web.data",
        "swipl-bundle.js",
    ],
    cmd = "$(COREUTILS_BIN) cp $(SRCS) $(RULEDIR)",
    toolchains = ["@coreutils_toolchains//:resolved_toolchain"],
)
