load("//third_party/deno:deno_bundle.bzl", "deno_bundle")

filegroup(
    name = "script",
    srcs = [
        ":digital",
        ":hello",
        ":nb",
        ":swipl",
    ],
    visibility = ["//:__pkg__"],
)

deno_bundle(
    name = "hello",
    srcs = ["hello.ts"],
    out = "hello.js",
    entrypoint = "hello.ts",
)

genrule(
    name = "nb",
    srcs = ["//experiments/nbmagic"],
    outs = [
        "nb.js",
        "js-worker.js",
    ],
    cmd = "$(COREUTILS_BIN) cp $(SRCS) $(RULEDIR)",
    toolchains = ["@coreutils_toolchains//:resolved_toolchain"],
)

genrule(
    name = "digital",
    srcs = ["//experiments/digital"],
    outs = [
        "digital.js",
        "digital.wasm",
    ],
    cmd = "$(COREUTILS_BIN) cp $(SRCS) $(RULEDIR)",
    toolchains = ["@coreutils_toolchains//:resolved_toolchain"],
)

genrule(
    name = "swipl",
    srcs = ["@swipl_wasm//:swipl-web"],
    outs = [
        "swipl-web.js",
        "swipl-web.d.ts",
        "swipl-web.wasm",
        "swipl-web.data",
        "swipl-bundle.js",
    ],
    cmd = "$(COREUTILS_BIN) cp $(SRCS) $(RULEDIR)",
    toolchains = ["@coreutils_toolchains//:resolved_toolchain"],
)
