load("@bazel_skylib//rules:copy_file.bzl", "copy_file")
load("@bazel_skylib//rules:select_file.bzl", "select_file")

filegroup(
    name = "script",
    srcs = [
        ":digital",
        ":gol64",
        ":hello",
        ":nb",
        ":swipl",
    ],
    visibility = ["//:__pkg__"],
)

genrule(
    name = "hello",
    srcs = ["hello.ts"],
    outs = ["hello.js"],
    cmd = "$(ESBUILD) $< > $@",
    toolchains = ["//third_party/esbuild:resolved"],
)

genrule(
    name = "nb",
    srcs = ["//experiments/nbmagic"],
    outs = [
        "nb.js",
        "js-worker.js",
    ],
    cmd = "$(COREUTILS_BIN) cp $(SRCS) $(RULEDIR)",
    toolchains = ["@coreutils_toolchains//:resolved_toolchain"],
)

genrule(
    name = "digital",
    srcs = ["//experiments/digital"],
    outs = [
        "digital.js",
        "digital.wasm",
    ],
    cmd = "$(COREUTILS_BIN) cp $(SRCS) $(RULEDIR)",
    toolchains = ["@coreutils_toolchains//:resolved_toolchain"],
)

genrule(
    name = "swipl",
    srcs = ["@swipl_wasm//:swipl-web"],
    outs = [
        "swipl-web.js",
        "swipl-web.d.ts",
        "swipl-web.wasm",
        "swipl-web.data",
        "swipl-bundle.js",
    ],
    cmd = "$(COREUTILS_BIN) cp $(SRCS) $(RULEDIR)",
    toolchains = ["@coreutils_toolchains//:resolved_toolchain"],
)

select_file(
    name = "_gol64_wasm",
    srcs = "//experiments/gol64:wasm",
    subpath = "gol64",
)

copy_file(
    name = "gol64wasm",
    src = "_gol64_wasm",
    out = "gol64.wasm",
)

copy_file(
    name = "gol64js",
    src = "//experiments/gol64:gol64.js",
    out = "gol64.js",
)

filegroup(
    name = "gol64",
    srcs = [
        ":gol64js",
        ":gol64wasm",
    ],
)
