load("@rules_shellcheck//:def.bzl", "shellcheck_test")
load("//tools/ape/bash:bash_binary.bzl", "bash_binary", "bash_test")

filegroup(
    name = "docs",
    srcs = ["mkdocs.yml"] + glob(["docs/**"]),
    visibility = ["//:__pkg__"],
)

bash_binary(
    name = "bforth",
    srcs = ["bforth.sh"],
    args = ["-t"],
    runtime_args = ["-u"],
)

bash_test(
    name = "tests",
    size = "small",
    srcs = ["bforth.sh"],
    args = [
        "-t",
        "$(rootpath bforth_test.f)",
    ],
    data = ["bforth_test.f"],
    runtime_args = ["-u"],
)

shellcheck_test(
    name = "shellcheck",
    data = ["bforth.sh"],
    severity = "style",
)
