load("@aspect_bazel_lib//lib:transitions.bzl", "platform_transition_binary")
load("@hedron_compile_commands//:refresh_compile_commands.bzl", "refresh_compile_commands")
load("@rules_cc//cc:cc_binary.bzl", "cc_binary")
load("@rules_cc//cc:cc_library.bzl", "cc_library")

cc_library(
    name = "map",
    srcs = ["map.c"],
    hdrs = ["map.h"],
    tags = ["manual"],
)

cc_library(
    name = "screen",
    srcs = ["screen.s"],
    hdrs = ["screen.h"],
    tags = ["manual"],
)

cc_binary(
    name = "bitrot",
    srcs = ["bitrot.c"],
    tags = ["manual"],
    deps = [
        ":map",
        ":screen",
    ],
)

cc_binary(
    name = "metrics",
    srcs = ["metrics.c"],
    tags = ["manual"],
    deps = [
        ":screen",
    ],
)

alias(
    name = "c64",
    actual = ":bitrot-c64",
)

platform_transition_binary(
    name = "bitrot-c64",
    binary = ":bitrot",
    target_platform = "@toolchains_cc65//platforms:c64",
)

platform_transition_binary(
    name = "metrics-sim65",
    binary = ":metrics",
    target_platform = "@toolchains_cc65//platforms:sim6502",
)

refresh_compile_commands(
    name = "sim65_refresh",
    targets = {
        ":metrics": "--copt=-D__SIM6502__ --copt=-D__fastcall__= --copt=-Iexternal/toolchains_cc65++cc65+cc65_linux_x86_64/include",
    },
)

refresh_compile_commands(
    name = "c64_refresh",
    targets = {
        ":bitrot": "--copt=-D__C64__ --copt=-D__CBM__ --copt=-D__fastcall__= --copt=-Iexternal/toolchains_cc65++cc65+cc65_linux_x86_64/include",
    },
)
