load("@rules_cc//cc:cc_binary.bzl", "cc_binary")
load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_cc//cc:cc_test.bzl", "cc_test")

cc_binary(
    name = "digital",
    srcs = ["src/main.c"],
    includes = ["src"],
    tags = ["windows"],
    visibility = ["//:__pkg__"],
    deps = [
        ":adders",
        ":clock",
        ":flipflops",
        ":latches",
        ":logic_gates",
        ":observable",
        "@slog",
    ],
)

cc_library(
    name = "observable",
    srcs = ["src/observable.c"],
    hdrs = ["src/observable.h"],
    includes = ["src"],
    tags = ["windows"],
    deps = [
        "@slog",
    ],
)

cc_library(
    name = "clock",
    srcs = ["src/clock.c"],
    hdrs = ["src/clock.h"],
    includes = ["src"],
    tags = ["windows"],
    deps = [
        ":observable",
        "@slog",
    ],
)

cc_library(
    name = "logic_gates",
    srcs = ["src/logic_gates.c"],
    hdrs = ["src/logic_gates.h"],
    includes = ["src"],
    tags = ["windows"],
    deps = [
        ":observable",
        "@slog",
    ],
)

cc_library(
    name = "latches",
    srcs = ["src/latches.c"],
    hdrs = ["src/latches.h"],
    includes = ["src"],
    tags = ["windows"],
    deps = [
        ":logic_gates",
        ":observable",
        "@slog",
    ],
)

cc_library(
    name = "flipflops",
    srcs = ["src/flipflops.c"],
    hdrs = ["src/flipflops.h"],
    includes = ["src"],
    tags = ["windows"],
    deps = [
        ":latches",
        ":logic_gates",
        ":observable",
        "@slog",
    ],
)

cc_library(
    name = "adders",
    srcs = ["src/adders.c"],
    hdrs = ["src/adders.h"],
    includes = ["src"],
    tags = ["windows"],
    deps = [
        ":logic_gates",
        ":observable",
        "@slog",
    ],
)

cc_test(
    name = "logic_gates_test",
    size = "small",
    srcs = ["src/logic_gates_test.cc"],
    includes = ["src"],
    tags = ["windows"],
    deps = [
        ":logic_gates",
        ":observable",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "latches_test",
    size = "small",
    srcs = ["src/latches_test.cc"],
    includes = ["src"],
    tags = ["windows"],
    deps = [
        ":latches",
        ":observable",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "flipflops_test",
    size = "small",
    srcs = ["src/flipflops_test.cc"],
    includes = ["src"],
    tags = ["windows"],
    deps = [
        ":flipflops",
        ":observable",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "adders_test",
    size = "small",
    srcs = ["src/adders_test.cc"],
    includes = ["src"],
    tags = ["windows"],
    deps = [
        ":adders",
        ":observable",
        "@googletest//:gtest_main",
    ],
)
