load("@aspect_bazel_lib//lib:transitions.bzl", "platform_transition_binary")
load("@rules_cc//cc:cc_binary.bzl", "cc_binary")
load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_cc//cc:cc_test.bzl", "cc_test")

includes = ["src"]

deps = select({
    "@platforms//cpu:wasm32": [
        "@twr_wasm//:twr_headers_only",
    ],
    "//conditions:default": [],
})

cc_binary(
    name = "digital",
    srcs = ["src/main.c"],
    includes = includes,
    tags = ["windows"],
    visibility = ["//:__pkg__"],
    deps = deps + [
        ":adders",
        ":clock",
        ":flipflops",
        ":latches",
        ":logic_gates",
        ":observable",
        "@slog",
    ],
)

cc_library(
    name = "observable",
    srcs = ["src/observable.c"],
    hdrs = ["src/observable.h"],
    tags = ["windows"],
    deps = deps + [
        "@slog",
    ],
)

cc_library(
    name = "clock",
    srcs = ["src/clock.c"],
    hdrs = ["src/clock.h"],
    includes = includes,
    tags = ["windows"],
    deps = deps + [
        ":observable",
    ],
)

cc_library(
    name = "logic_gates",
    srcs = ["src/logic_gates.c"],
    hdrs = ["src/logic_gates.h"],
    includes = includes,
    tags = ["windows"],
    deps = deps + [
        ":observable",
    ],
)

cc_library(
    name = "latches",
    srcs = ["src/latches.c"],
    hdrs = ["src/latches.h"],
    includes = includes,
    tags = ["windows"],
    deps = deps + [
        ":logic_gates",
        ":observable",
    ],
)

cc_library(
    name = "flipflops",
    srcs = ["src/flipflops.c"],
    hdrs = ["src/flipflops.h"],
    includes = includes,
    tags = ["windows"],
    deps = deps + [
        ":latches",
        ":logic_gates",
        ":observable",
    ],
)

cc_library(
    name = "adders",
    srcs = ["src/adders.c"],
    hdrs = ["src/adders.h"],
    includes = includes,
    tags = ["windows"],
    deps = deps + [
        ":logic_gates",
        ":observable",
    ],
)

cc_test(
    name = "logic_gates_test",
    size = "small",
    srcs = ["src/logic_gates_test.cc"],
    includes = includes,
    tags = ["windows"],
    deps = [
        ":logic_gates",
        ":observable",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "latches_test",
    size = "small",
    srcs = ["src/latches_test.cc"],
    includes = includes,
    tags = ["windows"],
    deps = [
        ":latches",
        ":observable",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "flipflops_test",
    size = "small",
    srcs = ["src/flipflops_test.cc"],
    includes = includes,
    tags = ["windows"],
    deps = [
        ":flipflops",
        ":observable",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "adders_test",
    size = "small",
    srcs = ["src/adders_test.cc"],
    includes = includes,
    tags = ["windows"],
    deps = [
        ":adders",
        ":observable",
        "@googletest//:gtest_main",
    ],
)

cc_binary(
    name = "digital.wasm",
    srcs = ["src/main_wasm32.c"],
    includes = includes,
    linkopts = [
        "-Wl,--no-entry",
        "-Wl,--import-memory",
    ],
    target_compatible_with = [
        "@platforms//os:none",
        "@platforms//cpu:wasm32",
    ],
    deps = deps + [
        ":adders",
        ":clock",
        ":flipflops",
        ":latches",
        ":logic_gates",
        ":observable",
        "@walloc",
    ],
)

platform_transition_binary(
    name = "wasm32",
    binary = ":digital.wasm",
    target_platform = "//platforms:wasm32",
)
