load("@bazel_skylib//rules:copy_file.bzl", "copy_file")
load("@bazel_skylib//rules:select_file.bzl", "select_file")

filegroup(
    name = "docs",
    srcs = ["mkdocs.yml"] + glob(["docs/**"]),
    visibility = ["//:__pkg__"],
)

filegroup(
    name = "digital",
    srcs = [
        ":digital_js",
        ":digital_wasm",
    ],
    visibility = ["//docs/script:__pkg__"],
)

select_file(
    name = "digital_wasm",
    srcs = "//experiments/digital/src:wasm32",
    subpath = "wasm32/digital.wasm",
)

copy_file(
    name = "digital_js",
    src = "//experiments/digital/web",
    out = "digital.js",
)
