load("@aspect_bazel_lib//lib:transitions.bzl", "platform_transition_binary")
load("@hedron_compile_commands//:refresh_compile_commands.bzl", "refresh_compile_commands")
load("@rules_cc//cc:cc_binary.bzl", "cc_binary")

cc_binary(
    name = "gol64",
    srcs = [
        "gol64.c",
    ],
    tags = ["manual"],
)

platform_transition_binary(
    name = "c64",
    binary = ":gol64",
    target_platform = "@toolchains_cc65//platforms:c64",
)

platform_transition_binary(
    name = "sim6502",
    binary = ":gol64",
    target_platform = "@toolchains_cc65//platforms:sim6502",
)

refresh_compile_commands(
    name = "refresh_c64",
    targets = {
        ":gol64": "--copt=-D__C64__ --copt=-D__CBM__ --copt=-Iexternal/toolchains_cc65++cc65+cc65_linux_x86_64/include",
    },
)

refresh_compile_commands(
    name = "refresh_sim6502",
    targets = {
        ":gol64": "--copt=-D__SIM6502__ --copt=-Iexternal/toolchains_cc65++cc65+cc65_linux_x86_64/include",
    },
)
