load("@aspect_bazel_lib//lib:transitions.bzl", "platform_transition_binary")
load("@hedron_compile_commands//:refresh_compile_commands.bzl", "refresh_compile_commands")
load("@rules_cc//cc:cc_binary.bzl", "cc_binary")

cc_binary(
    name = "gol64",
    srcs = select({
        "@platforms//cpu:wasm32": [
            "gol64.c",
        ],
        "//conditions:default": [
            "gol64.c",
            "update_cells.s",
        ],
    }),
    defines = select({
        "@platforms//cpu:wasm32": [
            "C_IMPL",
        ],
        "//conditions:default": [],
    }),
    linkopts = select({
        "@platforms//cpu:wasm32": [
            "-Wl,--no-entry",
            "-Wl,--import-memory",
            "-Wl,--export=mem",
            "-Wl,--export=glider_gun",
            "-Wl,--export=init_mem",
            "-Wl,--export=update_cells",
        ],
        "//conditions:default": [],
    }),
    tags = ["manual"],
    deps = select({
        "@platforms//cpu:wasm32": [
            "@twr_wasm//:twr_headers_only",
        ],
        "//conditions:default": [],
    }),
)

platform_transition_binary(
    name = "c64",
    binary = ":gol64",
    target_platform = "@toolchains_cc65//platforms:c64",
)

platform_transition_binary(
    name = "sim6502",
    binary = ":gol64",
    target_platform = "@toolchains_cc65//platforms:sim6502",
)

platform_transition_binary(
    name = "wasm",
    binary = ":gol64",
    target_platform = "//platforms:wasm32",
    visibility = ["//docs/script:__pkg__"],
)

refresh_compile_commands(
    name = "refresh_c64",
    targets = {
        ":gol64": "--copt=-D__C64__ --copt=-D__CBM__ --copt=-Iexternal/toolchains_cc65++cc65+cc65_linux_x86_64/include",
    },
)

refresh_compile_commands(
    name = "refresh_sim6502",
    targets = {
        ":gol64": "--copt=-D__SIM6502__ --copt=-Iexternal/toolchains_cc65++cc65+cc65_linux_x86_64/include",
    },
)

refresh_compile_commands(
    name = "refresh_wasm",
    targets = {
        ":gol64": "--platforms=//platforms:wasm32",
    },
)

filegroup(
    name = "docs",
    srcs = ["mkdocs.yml"] + glob(["docs/**"]),
    visibility = ["//:__pkg__"],
)

exports_files(["gol64.js"])
exports_files(["gol64.js"])
