load("@rules_java//java:defs.bzl", "java_library")
load("@rules_jvm_external//:defs.bzl", "artifact")

java_library(
    name = "main",
    srcs = glob(["src/main/java/**"]),
    deps = [
        artifact("org.ow2.asm:asm"),
        artifact("org.ow2.asm:asm-util"),
    ],
)

java_binary(
    name = "jasm",
    main_class = "io.github.ffortier.jasm.Main",
    runtime_deps = [":main"],
)

filegroup(
    name = "docs",
    srcs = ["mkdocs.yml"] + glob(["docs/**"]),
    visibility = ["//:__pkg__"],
)
