load("@rules_java//java:defs.bzl", "java_binary", "java_library", "java_test")
load("@rules_jvm_external//:defs.bzl", "artifact")

package(default_visibility = [":__subpackages__"])

java_library(
    name = "main",
    srcs = glob(["src/main/java/io/github/ffortier/jasm/core/**"]),
    deps = [
        artifact("org.ow2.asm:asm"),
        artifact("org.ow2.asm:asm-util"),
        artifact("org.slf4j:slf4j-api"),
    ],
)

java_binary(
    name = "jasm",
    srcs = glob(["src/main/java/io/github/ffortier/jasm/cli/**"]),
    main_class = "io.github.ffortier.jasm.cli.Main",
    runtime_deps = [
        artifact("ch.qos.logback:logback-classic:1.5.16"),
    ],
    deps = [
        ":main",
        artifact("info.picocli:picocli:4.7.6"),
    ],
)

filegroup(
    name = "docs",
    srcs = ["mkdocs.yml"] + glob(["docs/**"]),
    visibility = ["//:__pkg__"],
)

java_test(
    name = "tests",
    srcs = glob(["src/test/java/**"]),
    args = [
        "execute",
        "--select-package=io.github.ffortier.jasm",
    ],
    main_class = "org.junit.platform.console.ConsoleLauncher",
    use_testrunner = False,
    runtime_deps = [
        artifact("org.junit.platform:junit-platform-commons"),
        artifact("org.junit.platform:junit-platform-console"),
        artifact("org.junit.platform:junit-platform-engine"),
        artifact("org.junit.platform:junit-platform-launcher"),
        artifact("org.junit.platform:junit-platform-suite-api"),
    ],
    deps = [
        ":main",
        artifact("org.junit.jupiter:junit-jupiter-api"),
        artifact("org.junit.jupiter:junit-jupiter-engine"),
        artifact("org.junit.jupiter:junit-jupiter-params"),
        artifact("org.junit.platform:junit-platform-suite-api"),
    ],
)
