load(":defs.bzl", "cc_binary", "cc_library")

cc_binary(
    name = "test",
    srcs = [
        "boot.S",
        "init.c",
    ],
    # deps = [":walloc"],
)

cc_library(
    name = "walloc",
    srcs = ["walloc_wrapper.c"],
    tags = ["manual"],
    deps = ["@walloc//:lib"],
)

exports_files(["linker.ld"])
