load("@aspect_bazel_lib//lib:transitions.bzl", "platform_transition_filegroup")
load("//third_party/nasm:defs.bzl", "nasm_binary")
load(":defs.bzl", "cc_binary", "cc_library")

cc_binary(
    name = "test",
    srcs = [
        "boot.S",
        "init.c",
    ],
    # deps = [":walloc"],
)

cc_library(
    name = "walloc",
    srcs = ["walloc_wrapper.c"],
    tags = ["manual"],
    deps = ["@walloc//:lib"],
)

exports_files(["linker.ld"])

nasm_binary(
    name = "boot",
    srcs = ["boot.asm"],
)

platform_transition_filegroup(
    name = "bin",
    srcs = [
        ":boot",
        ":test",
    ],
    target_platform = "//platforms:i386-kernel",
)
